# PALISADE-SizeOf-Fork

./: .gitignore  .gitlab-ci.yml  .gitmodules  CIRCUIT-ESTIMATES  CIRCUITCONTEXT  CMakeLists.User.txt  CMakeLists.txt  CONFS3  CTX-DCRT-BFVrns  CTX-DCRT-Null  CTX-POLY-BFV  CTX-POLY-BFVrns  CTX-POLY-Null  Contact.md  Contributors.md  GatherSamples  License.md  MakePublicRelease  Makefile  Makefile.abe  Makefile.benchmark  Makefile.circuit  Makefile.common  Makefile.core  Makefile.demos  Makefile.docs  Makefile.gmp  Makefile.lin  Makefile.mac  Makefile.mingw  Makefile.mingw64  Makefile.ntl  Makefile.pke  Makefile.signature  Makefile.targets  Makefile.tcmalloc  Makefile.test  Makefile.third-party  Makefile.trapdoor  Makefile.wip  (+44 more)
android/: Android.mk  Application.mk  BuildAndroidJar  CMakeLists.txt  PackageAndroidLibs  RunAndroidUnitTests
android/jni/PALISADE/: PALISADEjni.cpp  com_palisade_PALISADE.h
android/jni/gmp/: Android.mk  compile-gmp-arm.sh  compile-gmp-x86.sh
android/jni/ntl/: README.android
android/jni/palisadeJNI/: settings.gradle
android/jni/unittest/: testmain.cpp  testmain2.cpp
benchmark/: CMakeLists.txt  README.md
benchmark/examples/: benchmark_test.cc
benchmark/include/libsrc/: benchmark.cc  cycleclock.h
benchmark/src/: AllBackends.h  BBIMath.cpp  BBINativeMath.cpp  BBVMath.cpp  BBVNativeMath.cpp  BBVhelper.h  BBprimes.cpp  BigVectorMath.cpp  Crypto.cpp  ElementParmsHelper.h  Encoding.cpp  EncryptHelper.h  IntegerMath.cpp  Lattice.cpp  LatticeCompare.cpp  LatticeNative.cpp  NbTheory.cpp  SHE.cpp  Source_bm.cpp  Source_presim_bm.cpp  VectorMath.cpp  basic_test.cpp  binfhe-ap.cpp  cxx03_test.cc  diffSnapshot.cpp  lib-benchmark.cpp  vechelper.h
src/abe/: CMakeLists.txt
src/abe/demo/: CPABEDemo.cpp  CPABETwoPhaseDemo.cpp  IBEDemo.cpp  IBETwoPhaseDemo.cpp
src/abe/lib/: abecontext-impl.cpp  abecontext.cpp  abecontext.h  abecore-impl.cpp  abecore.h  abeparamset.h  cpabe-impl.cpp  cpabe.cpp  cpabe.h  ibe-impl.cpp  ibe.cpp  ibe.h
src/abe/unittest/: UnitTestABEContext.cpp  UnitTestCPABE.cpp  UnitTestIBE.cpp
src/circuit/: CMakeLists.txt  circuitgraph.cpp  circuitgraph.h  circuitnode.cpp  circuitnode.h  circuitruntimes.h  circuitsim.cpp  circuitsim.h
src/circuit/demo/: ALEXlinreg1.acirc  ALEXlinreg2.acirc  gentimingest.cpp  inner-product-demos.cpp  linregression.acirc  mat3x3.acirc  palcircuit.cpp  parse.y  parsedriver.cpp  parsedriver.h  s1.acirc  s2.acirc  s4.acirc  s5.acirc  s6.acirc  s7.acirc  s8.acirc  sample-matrix-mult.acirc  sample-mult.acirc  sample0.acirc  sampleseries.acirc  types.h
src/circuit/lib/: circuitfunction.h  circuitgraph.cpp  circuitgraph.h  circuitinput.cpp  circuitinput.h  circuitnode.cpp  circuitnode.h  circuitruntimes.cpp  circuitruntimes.h  circuitsim.cpp  circuitsim.h  circuitvalue.cpp  circuitvalue.h  impl.cpp  palisadecircuit.cpp  palisadecircuit.h  parse.y  parsedriver.cpp  parsedriver.h  scan.l  value.cpp  value.h
src/circuit/scripts/: linregression-input-2.acirc  linregression.acirc  mat-mul.acirc  s0-input.acirc  s0.acirc  s1-input.acirc  s1.acirc  s3.acirc  s4.acirc  s7.acirc  sample-matrix-add-mult.acirc  sample-matrix-add.acirc  sample2.acirc  sampleseries.acirc  simple-input.acirc
src/circuit/unittest/: Main_TestAll.cpp
src/core/: CMakeLists.txt
src/core/demo/: AESUtilDemo.cpp  DFTSource.cpp  LargeFloatSource.cpp  MathSource.cpp  NTTSource.cpp  NTTSource2.cpp  ParallelSource.cpp  ParmSetCalculator.cpp  SamplingGaussianTesting.cpp  SamplingSource.cpp  Temp-dieharder.cpp  Temp-hash.cpp  Temp-il.cpp  Temp-nativepoly.cpp  Temp-ntt.cpp  Temp-prng.cpp  Temp-xvector.cpp
src/core/encoding/: byteplaintextencoding.h
src/core/include/: palisadecore.h
src/core/lattice/: elemparams.h  ilparams.cpp  ilvector2n.h
src/core/math/: binaryuniformgenerator.cpp  binaryuniformgenerator.h  discretegaussiangenerator.cpp  matrix.cpp
src/core/unittest/: Main_TestAll.cpp  UnitTestBinInt.cpp  UnitTestBinVect.cpp  UnitTestBlockAllocate.cpp  UnitTestCommonElements.cpp  UnitTestDCRTElements.cpp  UnitTestDistrGen.cpp  UnitTestEncoding.cpp  UnitTestField2n.cpp  UnitTestILVector2n.cpp  UnitTestILVectorArray2n.cpp  UnitTestLargeFloat.cpp  UnitTestLatticeElements.cpp  UnitTestMatrix.cpp  UnitTestMubint.cpp  UnitTestMubintvec.cpp  UnitTestNTT.cpp  UnitTestNative64.cpp  UnitTestNbTheory.cpp  UnitTestPolyElements.cpp  UnitTestSTLBlockAllocate.cpp  UnitTestSerialize.cpp  UnitTestTransform.cpp  UnitTestTrapdoor.cpp  UnitTestUbint.cpp  UnitTestUbintvec.cpp  UnitTestXallocate.cpp  tests
src/core/utils/: serializable.h  serializablehelper.h
src/pke/: CMakeLists.txt  bv.h  cryptocontext.h  fv.h  nullscheme.cpp  nullscheme.h  palisadespace.h  stst.cpp  stst.h
src/pke/demo/: BenchMarking.NOcpp  BenchMarking.cpp  Evaluator.cpp  PrettyJson.cpp  README.md  Run-linregress.cpp  SampleApp.cpp  Source.cpp  SourceBVEvalMult.cpp  Source_Empty.cpp  Source_bv.cpp  Source_bvCPack.cpp  Source_bv_evalMult_SAR.cpp  Source_bv_evalMult_SAR.cppNOCOMPILE  Source_dcrt.cpp  Source_fv.cpp  Source_json.cpp  Source_presim.cpp  (+92 more)
src/signature/: CMakeLists.txt
src/trapdoor/: CMakeLists.txt
src/wip/: CMakeLists.txt
test/: CMakeLists.txt  Main_TestAll.cpp  README.md  benchmark_all_backends.sh  build_all_backends.sh  build_cov_test_backends.sh  build_full_test_backends.sh  takeSnapshot.sh  test_all_backends.sh  test_cov_backends.sh  test_full_cov_backends.sh  test_results_parse.awk  valgrind_all_backends.sh
test/src/: Main_TestAll.cpp  UnitTestBV.cpp  UnitTestBVDCRT.cpp  UnitTestBatching.cpp  UnitTestBinInt.cpp  UnitTestBinMat.cpp  UnitTestBinVect.cpp  UnitTestBint.cpp  UnitTestBintVec.cpp  UnitTestBintvec.cpp  UnitTestDistrGen.cpp  UnitTestDistrGen.xcpp  UnitTestEncryption.cpp  UnitTestFV.cpp  UnitTestField2n.cpp  UnitTestLTV.cpp  UnitTestLatticeElements.cpp  UnitTestMatrix.cpp  UnitTestMatrix.xcpp  UnitTestMubint.cpp  UnitTestMubintvec.cpp  UnitTestNTT.cpp  UnitTestNbTheory.cpp  UnitTestSHE.cpp  UnitTestSHE2.cpp  UnitTestSHEAdvanced.cpp  UnitTestSignatureGPV.cpp  UnitTestTransform.cpp  UnitTestUbint.cpp  UnitTestUbintvec.cpp  cryptolayertests.h
(+1280 files in other folders)
